@@ -1,9 +1,10 @@
 <html>
 <body>
-<ul>
-<li>The randomizers at this tab are made in a way that you can execute them multiple times for the same flame in order to try many possible options. I. e., there will be no "point of no return" that the flame is altered in a way, that further changes will have no interesting change.
-<li>You may also combine them, e.g. add bokeh or weighting-fields to a randomized flame
-<li>To undo a lot of unwanted changes may be a tedious task. So it may make sense to start randomizing using a working copy (by clicking at the SShot-button). So, you can keep your original flame unaltered and come back to it at any time.
-</ul>
+1. The randomizers at this tab are made in a way that you can execute them multiple times for the same flame in order to try
+many possible options. I. e., there will be no "point of no return" that the flame is altered in a way, that further changes
+will have no interesting change.<br><br>
+2. You may also combine them, e.g. add bokeh or weighting-fields to a randomized flame<br><br>
+3. To undo a lot of unwanted changes may be a tedious task. So it may make sense to start randomizing using a working
+copy (by clicking at the SShot-button). So, you can keep your original flame unaltered and come back to it at any time.<br>
 </body>
 </html>
